--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           az webapp config container set \
           -g ss-lab-rg \
-          -n sslab-webapp \
+          -n sslab-webapp-andrey \
           --container-image-name sslablabacrandrey.azurecr.io/myapp:latest \
           --container-registry-url https://sslablabacrandrey.azurecr.io \
           --container-registry-user ${{secrets.ACR_USER}} \
